--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/content": "^1.7.0",
     "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/pwa": "^3.0.0",
+    "@tailwindcss/typography": "^0.2.0",
     "nuxt": "^2.14.0"
   },
   "devDependencies": {
