--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "lint": "yarn lint:js"
   },
   "dependencies": {
-    "@nuxt/content": "^1.7.0",
+    "@nuxt/content": "^1.8.0",
     "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/pwa": "^3.0.0",
     "@tailwindcss/typography": "^0.2.0",
-    "nuxt": "^2.14.0"
+    "nuxt": "^2.14.0",
+    "reading-time": "^1.2.0",
+    "remark": "^12.0.1",
+    "remark-excerpt": "^1.0.0-beta.1",
+    "remark-html": "^12.0.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
