--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/pwa": "^3.0.0",
     "@tailwindcss/typography": "^0.2.0",
+    "mermaid": "^8.8.0",
     "nuxt": "^2.14.0",
     "reading-time": "^1.2.0",
     "remark": "^12.0.1",
