--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "reading-time": "^1.2.0",
     "remark": "^12.0.1",
     "remark-excerpt": "^1.0.0-beta.1",
-    "remark-html": "^12.0.0"
+    "remark-html": "^12.0.0",
+    "sass": "^1.26.10",
+    "sass-loader": "^10.0.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
