--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "lint": "yarn lint:js"
   },
   "dependencies": {
-    "@nuxt/content": "^1.8.0",
-    "@nuxtjs/axios": "^5.12.0",
+    "@nuxt/content": "^1.14.0",
+    "@nuxtjs/axios": "^5.13.0",
     "@nuxtjs/pwa": "^3.0.0",
     "@tailwindcss/typography": "^0.4.0",
+    "date-fns": "^2.21.3",
     "mermaid": "^8.8.0",
     "nuxt": "^2.14.0",
     "reading-time": "^1.2.0",
